Changelog
=========

3.1a5 - unreleased
------------------


3.1a4 - 2010-06-18
------------------

- Removed example types, Plone's default types are LinguaPlone aware and
  provide a good demo of the functionality.
  [hannosch]

- Refactored tests and conform to PEP8 in more places.
  [hannosch]

- Changed the default index used for Language to be a normal FieldIndex. For
  most sites this is sufficient and avoids the major performance hit the
  LanguageIndex brings with it.
  [hannosch]

- Refactor selector code to make it easier to write unit tests for it.
  [hannosch]

- Added development information to README, this closes
  http://plone.org/products/linguaplone/issues/242.
  [hannosch]

- Lessen optimization in selector code, to deal with folderish objects used as
  default pages, refs http://plone.org/products/linguaplone/issues/228.
  [hannosch]

- Removed iterator for tabindex for Plone 4 compatibility.
  [hpeteragitator]

3.1a3 - 2010-05-25
------------------

- Small optimizations in invalidateTranslations, deletable language vocabulary
  and script - avoiding review state calculation and full object lookups.
  [hannosch]

- Removed logger instance and log method from ``config.py``.
  [hannosch]

- Removed unused variables from ``config.py``: ``DEBUG``, ``GLOBALS``,
  ``PKG_NAME``, ``SKIN_LAYERS``, ``SKIN_NAME``, ``INSTALL_DEMO_TYPES``.
  [hannosch]

- Added a general collection criteria translation sync functionality including
  language independent criteria support. This is currently not activated
  automatically and has no UI support yet. See the ``README.txt`` in the
  criteria sub-package for more caveats.
  [hannosch]

- Added tests to prove that indexing and updating reference fields works.
  [hannosch]

- Also handle multiValued references given by a tuple instead of a list in
  ``utils.translated_references``.
  [thet]

- Mini-optimization in language selector.
  [hannosch]

3.1a2 - 2010-03-29
------------------
