@@ -4,6 +4,8 @@ Changelog
 3.1a5 - unreleased
 ------------------
 
+- Use a normal FieldIndex in the uid_catalog.
+  [hannosch]
 
 3.1a4 - 2010-06-18
 ------------------
